Revision history for Perl extension Email::MIME.

{{$NEXT}}
        - remove Email:MIME::Creator from synopsis

1.926     2014-01-28 23:28:41-05:00 America/New_York
        - improve EOL processing with quoted-printable (thanks, Tomohiro
          Hosaka!)
        - avoid uninitialized warnings [rt.cpan.org #91707]

1.925     2013-11-08 07:01:03 America/New_York
        - improve reliability of mail reconstruction during walk_parts (thanks,
          Tomohiro Hosaka!)

1.924     2013-08-10 23:23:55 America/New_York
          update use of Email::MIME::ContentType to match new, fixed hash keys:
          type/subtype

1.923     2013-08-08 21:59:02 America/New_York
          do not consider the part-ending CRLF part of the body

          avoid undefined warnings in debug_structure [rt.cpan.org #82388]
          (Thanks, Kurt Anderson)

          better error message when the given body is a ref but not a scalar
          ref [rt.cpan.org #59205]

1.922     2013-07-10 08:45:02 America/New_York
          repackage, fixing version number

1.921     2013-07-01 22:51:01 America/New_York
          repackage, remove PEP links, update bugtracker

1.920     2013-06-17
          do not call parts_set during walk_parts unless the parts have
          actually changed

          When trying to decode a body, fall back to 7bit if the encoding is
          unknown.  Trying to create a new body in an unknown encoding is still
          forbidden.  This should make it easier to handle broken messages
          from "the internet."  ("Content-Transfer-Encoding: n"!?)

1.912_01  2013-04-08
          try to encode headers based on the header structure, if it has one,
          rather than treating the header as a big string in all cases; thanks
          for this work go to Jesse Luehrs

1.911     2012-07-22
          require a newer Email::Simple and cope with its improved line ending
          tweaks

1.910     2011-09-12
